apps/todoapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
  namespace: todoapp
spec:
  selector:
    app: todoapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
